src/test/deca/context/invalid/self/override2.deca
class A {
    int a() {}
}

class B extends A {
    int a;
}